# ist-webrtc-server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.yaml
.github/workflows/: release.yml
deploy/: webrtc-server.service
src/: camera_pipeline.cpp  camera_pipeline.h  config.cpp  config.h  h264_packetizer.cpp  h264_packetizer.h  main.cpp  peer_manager.cpp  peer_manager.h  signaling_server.cpp  signaling_server.h
web/: index.html
